--- a/package.json
+++ b/package.json
@@ -22,16 +22,12 @@
     "glob": "^5.0.14",
     "gulp": "^3.9.0",
     "gulp-less": "^3.0.3",
-    "gulp-notify": "^2.2.0",
-    "gulp-plumber": "^1.0.1",
-    "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.6",
-    "require-dir": "^0.3.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "~3.3.1",
     "gulp-minify-css": "~1.2.0",
     "gulp-autoprefixer": "~2.3.1",
     "gulp-uglify": "~1.2.0",
-    "run-sequence": "~1.1.2"
+    "babelify": "~6.2.0",
+    "babel": "~5.8.21"
   }
 }
